# YAAL

./: CMakeLists.txt  README.md  YAAL.hpp
allocators/: ChunkAllocator.hpp  ChunkAllocatorBase.hpp  VariableSizeChunkAllocator.hpp
tests/: ChunkAllocatorTest.cpp  PerformanceComparisonTest.cpp  TestTemplates.hpp  TestsConstants.hpp  VariableSizeChunkAllocatorTest.cpp
